gitops/infra-custom/kyverno/tests/disallow-default-namespace/resources.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-in-default
  namespace: default
spec:
  containers:
    - name: app
      image: ghcr.io/example/app:1.2.3
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-in-default
  namespace: default
spec:
  selector:
    matchLabels:
      app: deployment-in-default
  template:
    metadata:
      labels:
        app: deployment-in-default
    spec:
      containers:
        - name: app
          image: ghcr.io/example/app:1.2.3
